@@ -1,3 +1,8 @@
+modxRepository-1.2.2-beta
+=============================================================
+1.  Get packages DB-request bugfix
+
+
 modxRepository-1.2.1-beta
 =============================================================
 1.  getRepositories processor optimization
